# acastorage

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
acastorage/: __init__.py  main.py
tests/: conftest.py  test_main.py
